--- a/default.html
+++ b/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dung Phan</title>
+		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -15,10 +15,7 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Dung Phan</h1>
-				<p></p>
-    		</div><!-- /.blurb -->
+    		{{ content }}
 		</div><!-- /.container -->
 		<footer>
     		<ul>
