--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@ layout: default
 title: Dung Phan
 ---
 <div class="blurb">
+	<ul class="nav navbar-inverse">
+  <li>
+    <a href="index.html">Home</a>
+  </li>
+  <li>
+    <a href="publications.html">Publications</a>
+  </li>
+  <li>
+    <a href="CV.html">CV</a>
+  </li>
+</ul>
 	<h1>Hi there!</h1>
 	<p>About me</p>
 </div><!-- /.blurb -->
